# climatology_pi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.bak  Climatology.fbp  FindNetCDF.cmake  Frontend2.md  README  README.md  Read-Build.md  Trends.fbp  VERSION.cmake  appveyor.yml  climatology_pi.kdev4
.circleci/: config - Copy.yml  config-old.yml  config-revise.yml  config.yml
OLD/: CMakeLists.txt.bak  Frontend2.md
OLD/libs/plugingl/src/: qtstylesheet.cpp
buildosx/InstallOSX/: climatology_pi.pkgproj.in
ci/: circleci-build-android-arm64.sh  circleci-build-android-armhf.sh  circleci-build-macos.sh  travis-build-raspbian-armhf-part2.sh
cmake/: FindTinyXML.cmake  PluginConfigure.cmake  PluginInstall.cmake  PluginJSON.cmake  PluginLocalization.cmake  PluginNMEA.cmake  PluginPackage.cmake  PluginSetup.cmake  SimpleWxConfig.cmake
cmake/in-files/: cloudsmith-upload.sh.in
currentdata/: Makefile  gencurrentdata.cpp
data/: Climate-Data-Process.txt  ClimatologyInformation.html  README  airtemperature  cloud  current01  current02  current03  current04  current05  current06  current07  current08  current09  current10  current11  current12  cyclone-atl  cyclone-epa  cyclone-nio  cyclone-she  cyclone-spa  cyclone-wpa  elnino_years.txt  lightning  precipitation  relativehumidity  seadepth  sealevelpressure  seasurfacetemperature  wind01  wind02  wind03  wind04  wind05  wind06  wind07  wind08  wind09  wind10  (+2 more)
gendata/: .gitignore  Makefile  Makefile.in  README  configure  genatdata.cpp  genclddata.cpp  gencurrentdata.cpp  gencyclonedata.cpp  gencyclonedata1.cpp  genlightning.cpp  genprecipdata.cpp  genrelativehumiditydata.cpp  genseadepthdata.cpp  genslpdata.cpp  gensstdata.cpp  genwinddata.cpp  tracks.bsh
include/: ClimatologyConfigDialog.h  ClimatologyOverlayFactory.h  ClimatologyUI.h  climatology_pi.h  icons.h
libs/jsoncpp/: CMakeLists.txt
libs/ocpn-api/msvc/: opencpn.lib
manual/: antora.yml  site.yml
manual/climatology/: antora.yml  site.yml
manual/docs/: 404.html  index.html  sitemap.xml
manual/docs/climatology/0.1/: index.html
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  climatology_pi.pot  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  nl.po  (+19 more)
slpsstclddata/: Makefile  genclddata.cpp  genslpdata.cpp  gensstdata.cpp
src/: ClimatologyConfigDialog.cpp  ClimatologyConfigDialog.h  ClimatologyDialog.cpp  ClimatologyDialog.h  ClimatologyOverlayFactory.cpp  ClimatologyOverlayFactory.h  ClimatologyUI.cpp  ClimatologyUI.h  IsoBarMap.cpp  IsoBarMap.h  IsoLine.cpp  IsoLine.h  TexFont.h  TrendsConfigDialog.cpp  TrendsConfigDialog.h  TrendsDialog.cpp  TrendsDialog.h  TrendsOverlayFactory.cpp  TrendsOverlayFactory.h  TrendsUI.cpp  TrendsUI.h  cldc.cpp  cldc.h  climatology_pi.cpp  climatology_pi.h  defs.h  gldefs.h  icons.cpp  icons.h  now.xpm  pi_shaders.h  qtstylesheet.cpp  trends_pi.cpp  trends_pi.h
src/plugingl/: pidc.cpp
src/wxJSON/: jsonreader.cpp  jsonval.cpp  jsonwriter.cpp
winddata/: Makefile  genwinddata.cpp
wxJSON/: jsonreader.cpp  jsonval.cpp  jsonwriter.cpp
